resolving backend code smells